Date format for inspections Files modified - [Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -313,9 +313,10 @@
                                                     <wm-grid-column binding="addedAt" caption="Date Requested" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="users.fullName" caption="Requested By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="masterInspections.inspectionOutcome.outcome" caption="Outcome" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                    <wm-grid-column binding="masterInspections.requestedFor" caption="Requested For" show="true" readonly="undefined"></wm-grid-column>
+                                                    <wm-grid-column binding="masterInspections.requestedFor" caption="Requested For" type="string" datepattern="yyyy-MM-dd hh:mm a" formatpattern="toDate" edit-widget-type="text" show="true"
+                                                    readonly="false"></wm-grid-column>
                                                     <wm-grid-action key="addNewRow" display-name="Request Inspection" show="true" class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()"
-                                                    shortcutkey="" disabled="false" position="footer"></wm-grid-action>
+                                                    shortcutkey="" disabled="false"></wm-grid-action>
                                                 </wm-grid>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
