--- a/src/main/webapp/pages/ManageProjects/ManageProjects.html
+++ b/src/main/webapp/pages/ManageProjects/ManageProjects.html
@@ -13,60 +13,75 @@
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
                         <wm-panel iconclass="wi wi-building" autoclose="outsideClick" name="panel2" title="All CX Projects" class="panel-primary">
-                            <wm-livegrid formlayout="dialog" name="livegridProjects">
-                                <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvProjectsData.dataSet" navigation="Basic" name="gridProjects">
-                                    <wm-grid-column binding="projectName" caption="Project Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="modifiedDate" caption="Modified Date" type="timestamp" generator="assigned" edit-widget-type="timestamp" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="active" caption="Active" type="boolean" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false"></wm-grid-column>
-                                    <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Municipalities"></wm-grid-column>
-                                    <wm-grid-column binding="usersByCreatedBy.fullName" caption="Full Name" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
-                                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                    <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
-                                    <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
-                                </wm-grid>
-                                <wm-liveform novalidate="false" errormessage="Update Failed" title="Edit Project" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.lvProjectsData.dataSet" captionalign="left" captionposition="top" name="liveformProjects"
-                                defaultmode="Edit">
-                                    <wm-layoutgrid columns="1" name="layoutgrid2">
-                                        <wm-gridrow name="gridrow3">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn3_1">
-                                                <wm-form-field name="projectName" displayname="Project Name" show="true" primary-key="false" generator="assigned" key="projectName" type="string" readonly="true" required="false" widget="text" maxchars="255"
-                                                inputtype="text" placeholder="Enter value"></wm-form-field>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
-                                        <wm-gridrow name="gridrow4">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                                                <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="true" required="false" widget="select"
-                                                placeholder="Select value" displayexpression="municipalityName"></wm-form-field>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
-                                        <wm-gridrow name="gridrow5">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                                <wm-form-field name="active" displayname="Active" show="true" primary-key="false" generator="assigned" key="active" type="boolean" readonly="false" required="false" widget="checkbox" placeholder=""></wm-form-field>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
-                                    </wm-layoutgrid>
-                                    <wm-form-field name="usersByCreatedBy" displayname="Users By Created By" show="false" primary-key="false" generator="assigned" key="usersByCreatedBy" type="list" is-related="true" readonly="false" required="false" widget="select"
-                                    placeholder="Select value"></wm-form-field>
-                                    <wm-form-field name="usersByModifiedBy" displayname="Users By Modified By" show="false" primary-key="false" generator="assigned" key="usersByModifiedBy" type="list" is-related="true" readonly="false"
-                                    required="false" widget="select" placeholder="Select value"></wm-form-field>
-                                    <wm-form-field name="projectDescription" displayname="Project Description" show="false" primary-key="false" generator="assigned" key="projectDescription" type="string" readonly="false" required="false"
-                                    widget="text" maxchars="1000" inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-field name="projectGoals" displayname="Project Goals" show="false" primary-key="false" generator="assigned" key="projectGoals" type="string" readonly="false" required="false" widget="text" maxchars="1000"
-                                    inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-field name="estStartDate" displayname="Est Start Date" show="false" primary-key="false" generator="assigned" key="estStartDate" type="timestamp" readonly="false" required="false" widget="timestamp"
-                                    outputformat="timestamp" placeholder="Select date time"></wm-form-field>
-                                    <wm-form-field name="estEndDate" displayname="Est End Date" show="false" primary-key="false" generator="assigned" key="estEndDate" type="timestamp" readonly="false" required="false" widget="timestamp"
-                                    outputformat="timestamp" placeholder="Select date time"></wm-form-field>
-                                    <wm-form-field name="createdDate" displayname="Created Date" show="false" primary-key="false" generator="assigned" key="createdDate" type="timestamp" readonly="false" required="false" widget="timestamp"
-                                    outputformat="timestamp" placeholder="Select date time"></wm-form-field>
-                                    <wm-form-field name="modifiedDate" displayname="Modified Date" show="false" primary-key="false" generator="assigned" key="modifiedDate" type="timestamp" readonly="false" required="false" widget="timestamp"
-                                    outputformat="timestamp" placeholder="Select date time"></wm-form-field>
-                                    <wm-form-field name="projectGuid" displayname="Project Guid" show="false" primary-key="true" generator="uniqueid" key="projectGuid" type="string" readonly="true" required="true" widget="text" maxchars="100"
-                                    inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" action="save()" disabled="false" type="submit" update-mode="true"></wm-form-action>
-                                </wm-liveform>
-                            </wm-livegrid>
+                            <wm-layoutgrid name="layoutgrid3">
+                                <wm-gridrow name="gridrow6">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                                        <wm-label padding="unset 0.5em" name="label1" caption="This page allows CXAdmin to &quot;undelete&quot; Projects that have been &quot;soft deleted&quot; by standard or municipality users."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label2" caption="When &quot;Active&quot;=true, the Project appears on the MyProjects and MunicipalityProjects datagrids. When &quot;Active&quot;=false, a user has used the delete icon on either of those pages and the project has been removed from their view."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label3" caption="Periodically, projects that have been &quot;soft deleted&quot; will need to be removed completely from the database via the delete icon here, or a more automated solution."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow7">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn8">
+                                        <wm-livegrid formlayout="dialog" name="livegridProjects">
+                                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvProjectsData.dataSet" navigation="Classic" name="gridProjects" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                                                <wm-grid-column binding="projectName" caption="Project Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                <wm-grid-column binding="usersByCreatedBy.fullName" caption="Created By" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                                <wm-grid-column binding="modifiedDate" caption="Date Modified" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="timestamp"
+                                                show="true" filterwidget="date" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="active" caption="Active" type="boolean" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                            </wm-grid>
+                                            <wm-liveform novalidate="false" errormessage="Update Failed" title="Edit Project" formlayout="dialog" iconclass="wi wi-building" dataset="bind:Variables.lvProjectsData.dataSet" captionalign="left" captionposition="top"
+                                            name="liveformProjects" defaultmode="Edit">
+                                                <wm-layoutgrid columns="1" name="layoutgrid2">
+                                                    <wm-gridrow name="gridrow3">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn3_1">
+                                                            <wm-form-field name="projectName" displayname="Project Name" show="true" primary-key="false" generator="assigned" key="projectName" type="string" readonly="true" required="false" widget="text" maxchars="255"
+                                                            inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow4">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn4">
+                                                            <wm-form-field name="municipalities" displayname="Municipality" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="true" required="false"
+                                                            widget="select" placeholder="Select value" displayexpression="municipalityName" disabled="true"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow5">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn5">
+                                                            <wm-form-field name="active" displayname="Active" show="true" primary-key="false" generator="assigned" key="active" type="boolean" readonly="false" required="false" widget="checkbox" placeholder=""></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                </wm-layoutgrid>
+                                                <wm-form-field name="usersByCreatedBy" displayname="Users By Created By" show="false" primary-key="false" generator="assigned" key="usersByCreatedBy" type="list" is-related="true" readonly="false" required="false"
+                                                widget="select" placeholder="Select value"></wm-form-field>
+                                                <wm-form-field name="usersByModifiedBy" displayname="Users By Modified By" show="false" primary-key="false" generator="assigned" key="usersByModifiedBy" type="list" is-related="true" readonly="false"
+                                                required="false" widget="select" placeholder="Select value"></wm-form-field>
+                                                <wm-form-field name="projectDescription" displayname="Project Description" show="false" primary-key="false" generator="assigned" key="projectDescription" type="string" readonly="false" required="false"
+                                                widget="text" maxchars="1000" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="projectGoals" displayname="Project Goals" show="false" primary-key="false" generator="assigned" key="projectGoals" type="string" readonly="false" required="false" widget="text"
+                                                maxchars="1000" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="estStartDate" displayname="Est Start Date" show="false" primary-key="false" generator="assigned" key="estStartDate" type="timestamp" readonly="false" required="false"
+                                                widget="timestamp" outputformat="timestamp" placeholder="Select date time"></wm-form-field>
+                                                <wm-form-field name="estEndDate" displayname="Est End Date" show="false" primary-key="false" generator="assigned" key="estEndDate" type="timestamp" readonly="false" required="false" widget="timestamp"
+                                                outputformat="timestamp" placeholder="Select date time"></wm-form-field>
+                                                <wm-form-field name="createdDate" displayname="Created Date" show="false" primary-key="false" generator="assigned" key="createdDate" type="timestamp" readonly="false" required="false" widget="timestamp"
+                                                outputformat="timestamp" placeholder="Select date time"></wm-form-field>
+                                                <wm-form-field name="modifiedDate" displayname="Modified Date" show="false" primary-key="false" generator="assigned" key="modifiedDate" type="timestamp" readonly="false" required="false"
+                                                widget="timestamp" outputformat="timestamp" placeholder="Select date time"></wm-form-field>
+                                                <wm-form-field name="projectGuid" displayname="Project Guid" show="false" primary-key="true" generator="uniqueid" key="projectGuid" type="string" readonly="true" required="true" widget="text"
+                                                maxchars="100" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" action="save()" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
+                                                update-mode="true"></wm-form-action>
+                                            </wm-liveform>
+                                        </wm-livegrid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
