updated "Paid" fee color to match the application...even though it's red. Tweaked explanatory text on EditForm settings. updated display format of paid fee date Files modified - [EditForm.html,Forms.css,Forms.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -143,7 +143,7 @@
                                                                 class="help-block" fontsize="0.8" fontunit="em"></wm-label>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn57" padding="unset 1em unset unset">
-                                                                <wm-form-field name="inspections" displayname="Allow Inspections" show="true" primary-key="false" generator="assigned" key="inspections" type="boolean" widget="checkbox" placeholder="" hint="This option allows inspections as part of the form process and enables an &quot;Inspections&quot; tab on this page that contains further settings."></wm-form-field>
+                                                                <wm-form-field name="inspections" displayname="Allow Inspections" show="true" primary-key="false" generator="assigned" key="inspections" type="boolean" widget="checkbox" placeholder="" hint="This option allows inspections as part of the form process and enables an &quot;Inspections&quot; tab at the top of this page that contains further settings."></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn87_1"></wm-gridcolumn>
                                                         </wm-gridrow>
