--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -348,7 +348,7 @@
                                                         <wm-grid-column binding="paidStatus" caption="Payment Status" type="string" generator="assigned" col-ng-class="{'pendingFee-class':row.paidStatus=='Pending', 'paidFee-class':row.paidStatus=='Paid'}"
                                                         edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="paidDate" caption="Payment Date" type="date" generator="assigned" col-ng-class="{'paidFee-class':row.paidStatus=='Paid', 'pendingFee-class':row.paidStatus=='Pending'}"
-                                                        edit-widget-type="date" show="true" readonly="false"></wm-grid-column>
+                                                        datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="date" show="true" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="comments" caption="Comments" type="string" generator="assigned" col-ng-class="{'pendingFee-class':row.paidStatus=='Pending', 'paidFee-class':row.paidStatus=='Paid'}"
                                                         edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
@@ -398,7 +398,7 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow79_1">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn151_1" horizontalalign="center">
-                                                <wm-label padding="unset 0.5em" name="label87_1" show="bind:showCannotAddFee" caption="Sorry, fees can not be paid while the form is in the current status. Please check back later." color="red" fontweight="bold"></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label87_1" show="bind:showCannotAddFee" caption="Sorry, fees can not be paid while the form is in the current status. Please check back later." color="#e34343" fontweight="bold"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
