added missing tabs to view form/project/inspection/case pages. Updated sort order and labels for tabs to match more closely across all object types Files modified - [ViewCase.html,ViewProject.html,Forms.html,ViewInspection.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -489,6 +489,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
+                                <wm-tabpane name="tabpane15" title="INTERNAL"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
