--- a/src/main/webapp/pages/ViewCase/ViewCase.html
+++ b/src/main/webapp/pages/ViewCase/ViewCase.html
@@ -102,19 +102,18 @@
                 <wm-gridrow name="gridrow5">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn7">
                         <wm-panel iconclass="wi wi-list" autoclose="outsideClick" name="panelCase" title="Case Content" class="panel-primary">
-
                             <wm-tabs name="INSTRUCTIONS">
-                                <wm-tabpane name="tabpaneFIELDS" title="FIELDS" show="true"></wm-tabpane>
+                                <wm-tabpane name="tabpaneFIELDS" title="CASE" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneLocation" title="LOCATION" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneOwner" title="CONTACTS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneAttachments" title="ATTACHMENTS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFORMS" title="FORMS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneInspections" title="INSPECTIONS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFees" title="FEES" show="true"></wm-tabpane>
+                                <wm-tabpane name="tabpaneLETTERS" title="LETTERS"></wm-tabpane>
                                 <wm-tabpane name="tabpaneMessages" title="MESSAGES"></wm-tabpane>
                                 <wm-tabpane name="tabpaneHistory" title="HISTORY"></wm-tabpane>
-                                <wm-tabpane name="tabpaneLETTERS" title="LETTERS"></wm-tabpane>
-                                <wm-tabpane name="tabpaneNOTES" title="NOTES"></wm-tabpane>
+                                <wm-tabpane name="tabpaneNOTES" title="INTERNAL"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
