--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -1,9 +1,9 @@
-<wm-page data-ng-controller="ViewInspectionPageController" pagetitle="View Inspection">
-    <wm-header content="header"></wm-header>
-    <wm-top-nav content="topnav"></wm-top-nav>
-    <wm-content>
-        <wm-left-panel columnwidth="2" content="leftnav"></wm-left-panel>
-        <wm-page-content columnwidth="10">
+<wm-page data-ng-controller="ViewInspectionPageController" pagetitle="View Inspection" name="page1">
+    <wm-header content="header" name="header1"></wm-header>
+    <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
+    <wm-content name="content1">
+        <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
+        <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
@@ -102,16 +102,16 @@
                 <wm-gridrow name="gridrow5">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn7">
                         <wm-panel iconclass="wi wi-list" autoclose="outsideClick" name="panelInspection" title="Inspection Content" class="panel-primary">
-
                             <wm-tabs name="INSTRUCTIONS">
                                 <wm-tabpane name="tabpaneInspections" title="INSPECTION" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneLocation" title="LOCATION" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneAttachments" title="ATTACHMENTS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFORMS" title="FORMS" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFees" title="FEES" show="true"></wm-tabpane>
+                                <wm-tabpane name="tabpaneCodeEnforment" title="CODE ENFORCEMENT" show="true"></wm-tabpane>
                                 <wm-tabpane name="tabpaneMessages" title="MESSAGES"></wm-tabpane>
                                 <wm-tabpane name="tabpaneHistory" title="HISTORY"></wm-tabpane>
-                                <wm-tabpane name="tabpaneCodeEnforment" title="CODE ENFORCEMENT" show="true"></wm-tabpane>
+                                <wm-tabpane name="tabpaneINTERNAL" title="INTERNAL"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
@@ -119,5 +119,5 @@
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
-    <wm-footer content="footer"></wm-footer>
+    <wm-footer content="footer" name="footer1"></wm-footer>
 </wm-page>
