--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -155,8 +155,8 @@
                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                     </wm-grid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneDOCUMENTS" title="DOCUMENTS"></wm-tabpane>
-                                <wm-tabpane name="tabpane4" title="MESSAGING">
+                                <wm-tabpane name="tabpaneDOCUMENTS" title="ATTACHMENTS"></wm-tabpane>
+                                <wm-tabpane name="tabpane4" title="MESSAGES">
                                     <wm-layoutgrid name="layoutgrid16">
                                         <wm-gridrow name="gridrow58" padding="unset unset 1em unset">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn121">
@@ -206,7 +206,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneMAPS" title="MAPS">
+                                <wm-tabpane name="tabpaneMAPS" title="LOCATION">
                                     <wm-layoutgrid name="layoutgrid17">
                                         <wm-gridrow name="gridrow61">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn127">
@@ -232,6 +232,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
+                                <wm-tabpane name="tabpaneVENDOR" title="VENDOR"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFORMS" title="FORMS">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectForms.dataSet" navigation="Classic" name="gridProjectForms" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                                         <wm-grid-column-group name="group1" caption="Form Details">
@@ -254,7 +255,8 @@
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneINSPECTIONS" title="INSPECTIONS"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFEES" title="FEES"></wm-tabpane>
-                                <wm-tabpane name="tabpaneMUNICIPALITYMESSAGES" title="MUNICIPALITY MESSAGES"></wm-tabpane>
+                                <wm-tabpane name="tabpane13" title="HISTORY"></wm-tabpane>
+                                <wm-tabpane name="tabpaneMUNICIPALITYMESSAGES" title="INTERNAL"></wm-tabpane>
                             </wm-tabs>
                         </wm-panel>
                     </wm-gridcolumn>
