updated chart labels. updated Inspections instruction text Files modified - [Forms.variables.json,Forms.html,DashBoards.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -301,8 +301,8 @@
                                     <wm-layoutgrid name="layoutgrid15">
                                         <wm-gridrow name="gridrow56">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn117">
-                                                <wm-label padding="unset 0.5em" name="label27" caption="Please select the “+Request Inspection” button to request an inspection. If the button is disabled, then inspections are not allowed in this current form status."></wm-label>
-                                                <wm-label padding="unset 0.5em" name="label58" caption="Please contact the municipality directly with any questions related to inspections."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label27" caption="If your form requires inspections, you can request to schedule an inspection here."></wm-label>
+                                                <wm-label padding="unset 0.5em" name="label58" caption="Please contact the municipality directly if you need an inspection removed, if you requested the wrong inspection, or with any questions related to inspections."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow57">
